--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .github-pinner.gp-profile {
-  width: 400px;
+  width: auto ;
   height: auto;
 }
 
@@ -29,22 +29,74 @@ body {
 /* MARK: - Profile Styling */
 .github-pinner #gp-container-profile {
   position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 210px;
 }
 
-.github-pinner #gp-container-profile a > #gp-avatar {
+.github-pinner #gp-container-profile #g-emoji {
+  font-size: 12px;
+  background-color: #fff;
+  border: 1px solid #e1e4e8;
+  border-radius: 2em;
+  box-shadow: 0 1px 0 rgba(21, 24, 28, 0.04);
+  padding: 3px 6px 6px 3px!important;
+  /* padding: 6px!important; */
+  position: absolute;
+  bottom: 125;
+  left: 93%;
+  z-index: 2;
+  width: 16px;
+  height: 16px;
+  margin-bottom: 32px;
+  margin-left: -40px;
+  text-align: center;
+}
+.github-pinner #gp-container-profile #g-emoji .tooltiptext {
+  font-size: 10px;
+  visibility: hidden;
+  width: 100px !important;
+  background-color: #fff;
+  border: 1px solid #e1e4e8;
+  border-left-color: rgb(255, 255, 255);
+  color: #0366d6;
+  width: auto;
+  text-align: center;
+  padding: 6px 3px 6px 0px!important;
+  z-index: 2;
+  margin-top: -3px;
+  position: absolute;
+  border-radius: 0px 2em 2em 0px;
+}
+.github-pinner #gp-container-profile #g-emoji:hover .tooltiptext{
+  visibility: visible;
+}
+.github-pinner #gp-container-profile #avagit{
+  /* position: relative; */
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 210px;
+  /* padding-left: 10px; */
+}
+
+.github-pinner #gp-container-profile #gp-avatar {
   user-select: none;
   display: inline-block;
   vertical-align: top;
-  width: 80px; /* 80px if bio exists */
+  width: 180px; /* 80px if bio exists */
   /* 60px else */
-  border-radius: 5px;
+  border-radius: 50%;
+  z-index: 0;
 }
 
 .github-pinner #gp-container-profile > #gp-information {
-  width: calc(100% - 80px - 15px);
+  width: 200px;
   display: inline-block;
   overflow: auto;
   margin-left: 10px;
+  padding-top: 16px!important;
 }
 
 .github-pinner #gp-container-profile > #gp-information > .gp-element {
@@ -63,21 +115,22 @@ body {
 
 .github-pinner #gp-container-profile > #gp-information .gp-link > .gp-name {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .github-pinner #gp-container-profile > #gp-information .gp-link > .gp-user {
   display: block;
-  font-size: 16px;
-  color: #666;
+  font-size: 13px;
+  color: #666666;
+  line-height: 24px;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 250;
 }
 
 .github-pinner #gp-container-profile > #gp-information > .gp-bio {
-  margin-top: 5px;
-  font-size: 13px;
-  color: #6a737d;
+  padding-top: 10px;
+  font-size: 10.5px;
+  color: #24192e;
 }
 
 .github-pinner #gp-container-profile .gp-btn:hover {
@@ -89,7 +142,7 @@ body {
 
 .github-pinner #gp-container-profile .gp-btn {
     margin-top: 6px;
-    width: 100px;
+    width: 30px;
     float: right;
     text-decoration: none;
     text-align: center;
@@ -100,10 +153,10 @@ body {
     border-radius: 0.25em;
     -webkit-appearance: none;
     user-select: none;
-    padding: 6px 12px;
-    font-size: 14px;
+    padding: 6px 8px;
+    font-size: 10px;
     font-weight: 600;
-    line-height: 20px;
+    line-height: 5px;
     white-space: nowrap;
     vertical-align: middle;
     cursor: pointer;
@@ -115,12 +168,13 @@ body {
 .github-pinner #gp-container-profile > .gp-stats {
   display: block;
   margin-top: 8px;
+  width: 200px;
 }
 
 .github-pinner #gp-container-profile > .gp-stats .gp-stat {
   text-decoration: none;
-  width: 70px;
-  border-right: 1px solid #eaecef;
+  width: 35px;
+  /* border-right: 1px solid #eaecef; */
   color: #586069;
   cursor: pointer;
   display: inline-block;
@@ -138,13 +192,13 @@ body {
 
 .github-pinner #gp-container-profile > .gp-stats .gp-stat-val {
   color: #586069;
-  font-size: 19px;
+  font-size: 10px;
   text-align: center;
   display: block;
 }
 .github-pinner #gp-container-profile > .gp-stats .gp-stat-desc {
   color: #7b828a;
-  font-size: 11px;
+  font-size: 8px;
   text-align: center;
   display: block;
 }
@@ -170,9 +224,6 @@ body {
   margin-top: 5px;
   color: #586069 !important;
   font-size: 12px !important;
-}
-
-.github-pinner #gp-container-repo #gp-stats {
 }
 
 .github-pinner #gp-container-repo #gp-stats .gp-stat {
@@ -270,4 +321,16 @@ body {
 /* Additional Styles */
 .github-pinner.flat .gp-btn {
   background-color: blue;
+}
+
+.repos-tile {
+  display: flex;
+  height: 45vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.template {
+  display: inline-flex;
+
 }
