--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,11 @@ body {
 }
 
 .github-pinner {
-  /* background: linear-gradient(180deg, rgba(255,255,255,0) 10%, rgba(255,255,255) 100%), url(../asset/backlogo.jpg); */
   background-color: white;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
   border: 1px solid #e1e4e8;
   padding: 15px;
   border-radius: 5px;
+  display: flex;
 }
 
 .github-pinner.gp-profile {
@@ -52,17 +48,14 @@ body {
   padding: 3px 6px 6px 3px!important;
   /* padding: 6px!important; */
   position: absolute;
-  bottom: 135px;
-  left: 98%;
+  bottom: 125;
+  left: 93%;
   z-index: 2;
-  width: 27px;
-  height: 27px;
+  width: 16px;
+  height: 16px;
   margin-bottom: 32px;
   margin-left: -40px;
   text-align: center;
-}
-.github-pinner #gp-container-profile #g-emoji:hover {
-  cursor: context-menu;
 }
 .github-pinner #gp-container-profile #g-emoji .tooltiptext {
   font-size: 10px;
@@ -108,8 +101,6 @@ body {
   overflow: auto;
   margin-left: 10px;
   padding-top: 16px!important;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  text-align: left;
 }
 
 .github-pinner #gp-container-profile > #gp-information > .gp-element {
@@ -129,8 +120,6 @@ body {
 .github-pinner #gp-container-profile > #gp-information .gp-link > .gp-name {
   font-weight: 600;
   font-size: 18px;
-  text-align: left;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .github-pinner #gp-container-profile > #gp-information .gp-link > .gp-user {
@@ -140,16 +129,12 @@ body {
   line-height: 24px;
   font-style: normal;
   font-weight: 250;
-  text-align: left;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .github-pinner #gp-container-profile > #gp-information > .gp-bio {
   padding-top: 10px;
   font-size: 10.5px;
   color: #24192e;
-  text-align: left;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .github-pinner #gp-container-profile .gp-btn:hover {
@@ -161,7 +146,7 @@ body {
 
 .github-pinner #gp-container-profile .gp-btn {
     margin-top: 6px;
-    width: 50px;
+    width: 30px;
     float: right;
     text-decoration: none;
     text-align: center;
@@ -185,23 +170,20 @@ body {
 }
 
 .github-pinner #gp-container-profile > .gp-stats {
-  display:inline-block;
-  margin: 8px 8px 8px 0px;
+  display: block;
+  margin-top: 8px;
   width: 200px;
-  text-align: left !important;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .github-pinner #gp-container-profile > .gp-stats .gp-stat {
   text-decoration: none;
-  width: 45px;
+  width: 35px;
   /* border-right: 1px solid #eaecef; */
   color: #586069;
   cursor: pointer;
   display: inline-block;
-  padding: 0 6px 0px 0px;
+  padding: 0 6px;
   margin-top: 5px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .github-pinner #gp-container-profile > .gp-stats .gp-stat:last-of-type {
@@ -216,7 +198,6 @@ body {
   color: #586069;
   font-size: 10px;
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   display: block;
 }
 .github-pinner #gp-container-profile > .gp-stats .gp-stat-desc {
@@ -224,8 +205,6 @@ body {
   font-size: 8px;
   text-align: center;
   display: block;
-  text-transform: lowercase !important;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* MARK: - Repo Styling */
@@ -382,6 +361,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+
 .github-template {
     display: flex !important;
     flex-direction: row !important;
